deployment/data/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sitea-data
  name: sitea-data
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    kubevirt.io/vm: sitea-data
