deployment/data/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sitea-data
  name: sitea-data
spec:
  to:
    kind: Service
    name: sitea-data
    weight: 100
  port:
    targetPort: 80-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
